--- a/api-handler-server/package.json
+++ b/api-handler-server/package.json
@@ -2,8 +2,9 @@
   "name": "api-handler-server",
   "version": "1.0.0",
   "main": "src/index.ts",
+  "type": "commonjs",
   "scripts": {
-    "dev": "tsc && nodemon src/index.ts",
+    "dev": "nodemon src/index.ts",
     "build": "tsc",
     "start": "ts-node dist/index.js"
   },
@@ -11,9 +12,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "tsc-watch": "^6.2.0",
     "typescript": "^5.6.3"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0"
   }
 }
