--- a/reverse-proxy/package.json
+++ b/reverse-proxy/package.json
@@ -13,9 +13,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "http-proxy": "^1.18.1",
-    "multer": "^1.4.5-lts.1"
-  },
-  "devDependencies": {
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7"
   }
 }
